--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,13 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="icon" href="./U-logos.jpeg">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
     <link rel="manifest" crossorigin="use-credentials" href="manifest.json"/>
-    <title>React App</title>
+    <title>RoadMapUpiita</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
